--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,16 +8,16 @@
     z-index: 1;
     transform: 1s;
     backdrop-filter: blur(4px);
-    background-color: var(--varyLightGray);
+    /* background-color: var(--varyLightGray); */
 }
 .navbar a{
     text-decoration: none;
     margin: 0 1.5em;
-    font-size: 16px;
+    font-size: 18px;
     color: black;
     cursor: pointer;
 }
-.navbar .get-btn{
+nav .get_btn{
     position: absolute;
     top: 1em;
     right: 5em;
@@ -57,7 +57,20 @@
         transform: translateY(-100vh);
         gap: 1em;
         transition: 1s;
-        height: 200px;
+        height: 300px;
+    }
+    .navbar .responsive_navbar{
+        transform: none;
+    }
+    nav .get_btn{
+        position: absolute;
+        left: 150px;
+        top: 250px;       
+    }
+    .navbar .navbar_close{
+        position: absolute;
+        top: 2em;
+        right: 2em;
     }
 
 }
